samples/_failures_safe/1761040779_0425dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2a79762.c: In function ‘main’:
./samples/SAFE/__tmp_e2a79762.c:152:28: error: missing terminating " character
  152 |                     printf("Error: Cannot add
      |                            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2a79762.c:152:21: error: expected expression at end of input
  152 |                     printf("Error: Cannot add
      |                     ^~~~~~
./samples/SAFE/__tmp_e2a79762.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a79762.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a79762.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a79762.c:152:21: error: expected declaration or statement at end of input
